# advent-of-code-2022

./: .gitattributes  README.md
01/: README.md  solve.py
02/: README.md  solve.hs  x02.cabal
02/.devcontainer/: devcontainer.json
02/app/: solve.hs
03/: Cargo.toml  README.md
03/.devcontainer/: devcontainer.json
03/src/: solve1.rs  solve2.rs
04/: README.md  solve.lua
04/.devcontainer/: devcontainer.json
04/data/: example2.txt
05/: README.md  solve.icn
05/.devcontainer/: Dockerfile  devcontainer.json
06/: README.md  solve1.erl  solve2.erl
06/.devcontainer/: devcontainer.json
07/: .gitignore  Makefile  README.md  solve.c
07/.devcontainer/: devcontainer.json
07/data/: test.txt
08/: README.md  alire.toml  solve.gpr
08/.devcontainer/: Dockerfile  devcontainer.json
08/src/: main.adb
09/: .gitignore  README.md  project.clj
09/src/: solve.clj
10/: Makefile  README.md  solve.d
10/.devcontainer/: devcontainer.json
11/: .ocamlformat  Makefile  README.md  dune-project  solve.opam
11/.devcontainer/: Dockerfile  devcontainer.json
11/lib/: dune
12/: README.md  solve.dart
12/.devcontainer/: devcontainer.json
13/: .gitignore  README.md  mix.exs
13/.devcontainer/: devcontainer.json
13/data/: example1.txt
13/lib/: solve.ex
14/: README.md  common.rb  solve-1.rb  solve-2.rb
14/.devcontainer/: devcontainer.json
