(lang dune 3.6)

(name solve)

(generate_opam_files true)

(source
 (github tgargula/advent-of-code-2022))

(authors "Tomek Gargula")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name solve)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
